--- a/index.html
+++ b/index.html
@@ -36,54 +36,64 @@
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/kirill-pershin-1088404-unsplash.jpg" alt="фото монастыря в горах">
         <div class="mesto-card__subtitle">
-          <p class="mesto-card__subtitle-name">Карачаево-Ч...</p>
-          <img class="mesto-card__subtitle-icon" src="images/heart.svg">
+          <p class="mesto-card__subtitle-name">Карачаево-Черкесская республика</p>
+          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/fotof2.png" alt="фото горы Эльбрус">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Гора Эльбрус</p>
-          <img class="mesto-card__subtitle-icon" src="images/heart.svg">
+          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/fotof3.png" alt="фото домбай">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Домбай</p>
-          <img class="mesto-card__subtitle-icon" src="images/heart.svg">
+          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/thomas-vimare-IZ01rjX0XQA-unsplash.jpg" alt="фото моря">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Черное море</p>
-          <img class="mesto-card__subtitle-icon" src="images/heart.svg">
+          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/ivan-zimin-wsexDY7YqkI-unsplash.jpg" alt="Тарханкут мыс">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Тарханкут</p>
-          <img class="mesto-card__subtitle-icon" src="images/heart.svg">
+          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/ivan-zimin-wsexDY7YqkI-unsplash.jpg" alt="Заброшенный дом в Абхазии">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Абхазия</p>
-          <img class="mesto-card__subtitle-icon" src="images/heart.svg">
+          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
         </div>
       </div>
     </section>
-    <footer class="footer">
-      <p class="footer__auhtor">© 2020 Mesto Russia</p>
-    </footer>
-
-
-
-
   </main>
+  <footer class="footer">
+    <p class="footer__auhtor">© 2020 Mesto Russia</p>
+  </footer>
+  <section class="popup">
+    <fieldset class="popup__container">
+      <legend class="popup__form">Редактировать профиль</legend>
+      <label>
+        <input class="popup__name" type="text" value="name">Жак-Ив Кусто
+      </label>
+    </fieldset>
+
+
+  </section>
+
+
+
+
 
 </body>
 
