--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@
     <p class="footer__auhtor">© 2020 Mesto Russia</p>
   </footer>
   <section class="popup">
-    <fieldset class="popup__container">
-      <legend class="popup__form">Редактировать профиль</legend>
-      <label>
-        <input class="popup__name" type="text" value="name">Жак-Ив Кусто
-      </label>
-    </fieldset>
-
-
+    <div class="popup__container">
+      <form class="popup__input">
+        <h4 class="popup__form">Редактировать профиль</h4>
+        <input class="popup__name" type="text" value="Жак-Ив Кусто">
+        <input class="popup__name" type="text" value="Исследователь океана">
+        <button class="popup__button">Сохранить</button>
+      </form>
+      <img class="popup__close-icon" src="images/Close Icon.png">
+    </div>
   </section>
 
 
