--- a/index.html
+++ b/index.html
@@ -84,18 +84,14 @@
     <div class="popup__container">
       <form class="popup__input">
         <h4 class="popup__form">Редактировать профиль</h4>
-        <input class="popup__name" type="text" value="Жак-Ив Кусто">
-        <input class="popup__name" type="text" value="Исследователь океана">
-        <button class="popup__button">Сохранить</button>
+        <input class="popup__name" type="text" value="Жак-Ив Кусто" id="name">
+        <input class="popup__name" type="text" value="Исследователь океана" id="job">
+        <button type="submit" class="popup__button">Сохранить</button>
       </form>
       <img class="popup__close-icon" src="images/Close Icon.png">
     </div>
   </section>
-
-
-
-
-
+  <script src="script.js"></script>
 </body>
 
 </html>
