--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="vendor/normalize.css">
-  <title>Document</title>
+  <title>Mesto</title>
 </head>
 
 <body>
@@ -21,58 +21,58 @@
         <img class="profile__foto" src="images/gusto.jpg" alt="фото Жака-ив Кусто">
         <div class="profile__info">
           <div class="info">
-            <h3 class="profile__info-title">Жак-Ив Кусто</h3>
-            <img class="profile__bottom" src="images/edit.button.svg">
+            <h1 class="profile__info-title">Жак-Ив Кусто</h1>
+            <img class="profile__button" src="images/edit.button.svg" alt="кнопка изменить">
           </div>
           <p class="profile__info-subtitle">Исследователь океана</p>
         </div>
       </div>
       <div class="profile__add">
-        <img class="profile__bottom-add" src="images/add.buttom.svg">
+        <img class="profile__bottom-add" src="images/add.buttom.svg" alt="кнопка добавить">
       </div>
       </div>
     </section>
     <section class="elements">
       <div class="mesto-card">
-        <img class="mesto-card__photo" src="images/kirill-pershin-1088404-unsplash.jpg" alt="фото монастыря в горах">
+        <img class="mesto-card__photo" src="images/cherkes.jpg" alt="фото монастыря в горах">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Карачаево-Черкесская республика</p>
-          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
+          <img class="mesto-card__subtitle-icon" src="images/icon-like.png" alt="лайк">
         </div>
       </div>
       <div class="mesto-card">
-        <img class="mesto-card__photo" src="images/fotof2.png" alt="фото горы Эльбрус">
+        <img class="mesto-card__photo" src="images/elbrus.png" alt="фото горы Эльбрус">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Гора Эльбрус</p>
-          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
+          <img class="mesto-card__subtitle-icon" src="images/icon-like.png" alt="лайк">
         </div>
       </div>
       <div class="mesto-card">
-        <img class="mesto-card__photo" src="images/fotof3.png" alt="фото домбай">
+        <img class="mesto-card__photo" src="images/dombay.png" alt="фото домбай">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Домбай</p>
-          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
+          <img class="mesto-card__subtitle-icon" src="images/icon-like.png" alt="лайк">
         </div>
       </div>
       <div class="mesto-card">
-        <img class="mesto-card__photo" src="images/thomas-vimare-IZ01rjX0XQA-unsplash.jpg" alt="фото моря">
+        <img class="mesto-card__photo" src="images/blackSea.jpg" alt="фото моря">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Черное море</p>
-          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
+          <img class="mesto-card__subtitle-icon" src="images/icon-like.png" alt="лайк">
         </div>
       </div>
       <div class="mesto-card">
-        <img class="mesto-card__photo" src="images/ivan-zimin-wsexDY7YqkI-unsplash.jpg" alt="Тарханкут мыс">
+        <img class="mesto-card__photo" src="images/tarhankut.jpg" alt="Тарханкут мыс">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Тарханкут</p>
-          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
+          <img class="mesto-card__subtitle-icon" src="images/icon-like.png" alt="лайк">
         </div>
       </div>
       <div class="mesto-card">
-        <img class="mesto-card__photo" src="images/ivan-zimin-wsexDY7YqkI-unsplash.jpg" alt="Заброшенный дом в Абхазии">
+        <img class="mesto-card__photo" src="images/abhaziya.jpg" alt="Заброшенный дом в Абхазии">
         <div class="mesto-card__subtitle">
           <p class="mesto-card__subtitle-name">Абхазия</p>
-          <img class="mesto-card__subtitle-icon" src="images/Vector (2).png">
+          <img class="mesto-card__subtitle-icon" src="images/icon-like.png" alt="лайк">
         </div>
       </div>
     </section>
@@ -88,7 +88,7 @@
         <input class="popup__name" type="text" value="Исследователь океана" id="job">
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
-      <img class="popup__close-icon" src="images/Close Icon.png">
+      <img class="popup__close-icon" src="images/Close-Icon.png">
     </div>
   </section>
   <script src="script.js"></script>
