--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Mesto</title>
 </head>
 
 <body>
   <header class="header">
-    <img class="header__logo" src="images/logo.svg">
+    <img class="header__logo" src="images/logo.svg" alt="логотип">
     <div class="header__line"></div>
   </header>
   <main>
@@ -28,8 +27,7 @@
         </div>
       </div>
       <div class="profile__add">
-        <img class="profile__bottom-add" src="images/add.buttom.svg" alt="кнопка добавить">
-      </div>
+        <img class="profile__button-add" src="images/add.button.svg" alt="кнопка добавить">
       </div>
     </section>
     <section class="elements">
@@ -88,7 +86,7 @@
         <input class="popup__name" type="text" value="Исследователь океана" id="job">
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
-      <img class="popup__close-icon" src="images/Close-Icon.png">
+      <img class="popup__close-icon" src="images/Close-Icon.png" alt="крестик">
     </div>
   </section>
   <script src="script.js"></script>
