refactoring, подключила правильный шрифт, исправила отображение кнопки add

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="profile__add">
-        <img class="profile__button-add" src="images/add.button.svg" alt="кнопка добавить">
+        <button class="profile__button-add">+</button>
       </div>
     </section>
     <section class="elements">
