поправила плюс в секции profile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
       </div>
       <div class="profile__add">
-        <button class="profile__button-add">+</button>
+        <button class="profile__button-add">
+          <img class="profile__add-plus" src="images/Vector3.png">
+        </button>
       </div>
     </section>
     <section class="elements">
