--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="profile__add">
         <button class="profile__button-add">
-          <img class="profile__add-plus" src="images/Vector3.png">
+          <img class="profile__add-plus" src="images/Vector3.png" alt="плюс">
         </button>
       </div>
     </section>
