refactoring поменяла немного логику в JS

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <footer class="footer">
     <p class="footer__auhtor">© 2020 Mesto Russia</p>
   </footer>
-  <section class="popup">
+  <section class="popup popup_closed">
     <div class="popup__container">
       <form class="popup__input" name="popup-form">
         <h2 class="popup__form">Редактировать профиль</h2>
