--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="profile__info">
           <div class="profile__info-text">
             <h1 class="profile__info-title">Жак-Ив Кусто</h1>
-            <button class="profile__button" type="submit">
+            <button class="profile__button" type="button">
               <img class="profile__img" src='images/pan2.svg' alt="карандаш">
             </button>
           </div>
           <p class="profile__info-subtitle">Исследователь океана</p>
         </div>
       </div>
-      <button class="profile__button-add" type="submit">
+      <button class="profile__button-add" type="button">
         <img class="profile__add-plus" src="images/plus.svg" alt="плюс">
       </button>
     </section>
@@ -35,43 +35,43 @@
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/cherkes.jpg" alt="фото монастыря в горах">
         <div class="mesto-card__subtitle">
-          <h4 class="mesto-card__subtitle-name">Карачаево-Черкесская республика</h4>
-          <button class="mesto-card__subtitle-icon" type="submit"></button>
+          <h2 class="mesto-card__subtitle-name">Карачаево-Черкесская республика</h2>
+          <button class="mesto-card__subtitle-icon" type="button"></button>
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/elbrus.png" alt="фото горы Эльбрус">
         <div class="mesto-card__subtitle">
-          <h4 class="mesto-card__subtitle-name">Гора Эльбрус</h4>
-          <button class="mesto-card__subtitle-icon" type="submit"></button>
+          <h2 class="mesto-card__subtitle-name">Гора Эльбрус</h2>
+          <button class="mesto-card__subtitle-icon" type="button"></button>
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/dombay.png" alt="фото домбай">
         <div class="mesto-card__subtitle">
-          <h4 class="mesto-card__subtitle-name">Домбай</h4>
-          <button class="mesto-card__subtitle-icon" type="submit"></button>
+          <h2 class="mesto-card__subtitle-name">Домбай</h2>
+          <button class="mesto-card__subtitle-icon" type="button"></button>
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/blackSea.jpg" alt="фото моря">
         <div class="mesto-card__subtitle">
-          <h4 class="mesto-card__subtitle-name">Черное море</h4>
-          <button class="mesto-card__subtitle-icon" type="submit"></button>
+          <h2 class="mesto-card__subtitle-name">Черное море</h2>
+          <button class="mesto-card__subtitle-icon" type="button"></button>
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/tarhankut.jpg" alt="Тарханкут мыс">
         <div class="mesto-card__subtitle">
-          <h4 class="mesto-card__subtitle-name">Тарханкут</h4>
-          <button class="mesto-card__subtitle-icon" type="submit"></button>
+          <h2 class="mesto-card__subtitle-name">Тарханкут</h2>
+          <button class="mesto-card__subtitle-icon" type="button"></button>
         </div>
       </div>
       <div class="mesto-card">
         <img class="mesto-card__photo" src="images/abhaziya.jpg" alt="Заброшенный дом в Абхазии">
         <div class="mesto-card__subtitle">
-          <h4 class="mesto-card__subtitle-name">Абхазия</h4>
-          <button class="mesto-card__subtitle-icon" type="submit"></button>
+          <h2 class="mesto-card__subtitle-name">Абхазия</h2>
+          <button class="mesto-card__subtitle-icon" type="button"></button>
         </div>
       </div>
     </section>
@@ -79,15 +79,15 @@
   <footer class="footer">
     <p class="footer__auhtor">© 2020 Mesto Russia</p>
   </footer>
-  <section class="popup popup_closed">
+  <section class="popup">
     <div class="popup__container">
       <form class="popup__input" name="popup-form">
-        <h2 class="popup__form">Редактировать профиль</h2>
+        <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__name" type="text" value="Жак-Ив Кусто" id="name">
         <input class="popup__name" type="text" value="Исследователь океана" id="job">
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
-      <button class="popup__close-icon" type="submit"></button>
+      <button class="popup__close-icon" type="button"></button>
     </div>
   </section>
   <script src="scripts/index.js"></script>
