--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div class="popup__container">
       <form class="popup__input" name="popup-form">
         <h2 class="popup__title">Новое место</h2>
-        <input class="popup-add__name" type="text" value="Название" id="name">
-        <input class="popup-add__name" type="text" value="Ссылка на картинку" id="link">
+        <input class="popup-add__name" type="text" placeholder="Название" id="mesto">
+        <input class="popup-add__name" type="text" placeholder="Ссылка на картинку" id="link">
         <button type="submit" class="popup__button">Создать</button>
       </form>
       <button class="popup-add__close-icon" type="button"></button>
