--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h2 class="mesto-card__subtitle-name"></h2>
             <button class="mesto-card__subtitle-icon" type="button"></button>
           </div>
+          <button class="mesto-card__trash" type="button"></button>
         </div>
       </template>
     </section>
