сделала секцию photo

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
       <button class="popup-add__close-icon" type="button"></button>
     </div>
   </section>
+  <section class="photo">
+    <div class="photo__container">
+      <button class="photo__icon-close" type="button"></button>
+      <img class="photo__card" src="images/cherkes.png" />
+      <p class="photo__text">Писька пи</p>
+    </div>
+  </section>
   <script src="scripts/index.js"></script>
 </body>
 
