--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   <section class="photo">
     <div class="photo__container">
       <button class="photo__icon-close" type="button"></button>
-      <img class="photo__card" src="images/cherkes.png" />
-      <p class="photo__text">Писька пи</p>
+      <img class="photo__card" src="" alt="">
+      <p class="photo__text"></p>
     </div>
   </section>
   <script src="scripts/index.js"></script>
