--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="elements">
       <template id="mesto-card">
         <div class="mesto-card">
-          <img class="mesto-card__photo" src="" alt="">
+          <img class="mesto-card__photo" src="example.com" alt="шаблон карточки">
           <div class="mesto-card__subtitle">
             <h2 class="mesto-card__subtitle-name"></h2>
             <button class="mesto-card__subtitle-icon" type="button"></button>
@@ -72,7 +72,7 @@
   <section class="photo">
     <div class="photo__container">
       <button class="photo__icon-close" type="button"></button>
-      <img class="photo__card" src="" alt="">
+      <img class="photo__card" src="example.com" alt="фото">
       <p class="photo__text"></p>
     </div>
   </section>
