--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     </div>
   </section>
   <section class="popup-add">
-    <div class="popup__container">
-      <form class="popup__input" name="popup-form">
-        <h2 class="popup__title">Новое место</h2>
+    <div class="popup-add__container">
+      <form class="popup-add__input" name="popup-form">
+        <h2 class="popup-add__title">Новое место</h2>
         <input class="popup-add__name" type="text" placeholder="Название" id="mesto">
         <input class="popup-add__name" type="text" placeholder="Ссылка на картинку" id="link">
-        <button type="submit" class="popup__button">Создать</button>
+        <button type="submit" class="popup-add__button">Создать</button>
       </form>
       <button class="popup-add__close-icon" type="button"></button>
     </div>
