--- a/index.html
+++ b/index.html
@@ -47,36 +47,37 @@
   <footer class="footer">
     <p class="footer__auhtor">© 2020 Mesto Russia</p>
   </footer>
-  <section class="popup">
-    <div class="popup__container">
+  <section class="popup popup_type_edit">
+    <div class="popup__container popup__container_type_edit">
       <form class="popup__input" name="popup-form">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__name" type="text" value="Жак-Ив Кусто" id="name">
-        <input class="popup__name" type="text" value="Исследователь океана" id="job">
+        <input class="popup__name popup__name_type_edit" type="text" value="Жак-Ив Кусто" id="name">
+        <input class="popup__name popup__name_type_edit" type="text" value="Исследователь океана" id="job">
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
     </div>
   </section>
-  <section class="popup-add">
-    <div class="popup-add__container">
-      <form class="popup-add__input" name="popup-form">
-        <h2 class="popup-add__title">Новое место</h2>
-        <input class="popup-add__name" type="text" placeholder="Название" id="mesto">
-        <input class="popup-add__name" type="text" placeholder="Ссылка на картинку" id="link">
-        <button type="submit" class="popup-add__button">Создать</button>
+  <section class="popup popup_type_new-card">
+    <div class="popup__container popup__container_new-card">
+      <form class="popup__input" name="popup-form">
+        <h2 class="popup__title">Новое место</h2>
+        <input class="popup__name popup__name_type_new-card" type="text" placeholder="Название" id="mesto">
+        <input class="popup__name popup__name_type_new-card" type="text" placeholder="Ссылка на картинку" id="link">
+        <button type="submit" class="popup__button">Создать</button>
       </form>
-      <button class="popup-add__close-icon" type="button"></button>
+      <button class="popup__close-icon" type="button"></button>
     </div>
   </section>
-  <section class="photo">
-    <div class="photo__container">
-      <button class="photo__icon-close" type="button"></button>
-      <img class="photo__card" src="example.com" alt="фото">
-      <p class="photo__text"></p>
+  <section class="popup popup_type_image">
+    <div class="popup__container-image">
+      <button class="popup__close-icon" type="button"></button>
+      <img class="popup__card" src="example.com" alt="фото">
+      <p class="popup__text"></p>
     </div>
   </section>
   <script src="scripts/index.js"></script>
+  <script src="scripts/initial-сards.js"></script>
 </body>
 
 </html>
