--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <section class="elements">
       <template id="mesto-card">
         <div class="mesto-card">
-          <img class="mesto-card__photo" src="example.com" alt="шаблон карточки">
+          <img class="mesto-card__photo"
+            src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="шаблон карточки">
           <div class="mesto-card__subtitle">
             <h2 class="mesto-card__subtitle-name"></h2>
             <button class="mesto-card__subtitle-icon" type="button"></button>
@@ -72,7 +73,8 @@
   <section class="popup popup_type_image">
     <div class="popup__container-image">
       <button class="popup__close-icon" type="button"></button>
-      <img class="popup__card" src="example.com" alt="фото">
+      <img class="popup__card" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg"
+        alt="фото">
       <p class="popup__text"></p>
     </div>
   </section>
