--- a/index.html
+++ b/index.html
@@ -50,10 +50,18 @@
   </footer>
   <section class="popup popup_type_edit">
     <div class="popup__container popup__container_type_edit">
-      <form class="popup__input" name="popup-form">
+      <form name="edit-profile" class="popup__input" name="popup-form">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <input class="popup__name popup__name_type_edit" type="text" value="Жак-Ив Кусто" id="name">
-        <input class="popup__name popup__name_type_edit" type="text" value="Исследователь океана" id="job">
+        <div class="popup__name-container">
+          <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
+            value="Жак-Ив Кусто" id="name">
+          <span class="popup__name popup__name_type_err"></span>
+        </div>
+        <div class="popup__name-container">
+          <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
+            value="Исследователь океана" id="job">
+          <span class="popup__name popup__name_type_err"></span>
+        </div>
         <button type="submit" class="popup__button">Сохранить</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
@@ -61,10 +69,18 @@
   </section>
   <section class="popup popup_type_new-card">
     <div class="popup__container popup__container_new-card">
-      <form class="popup__input" name="popup-form">
+      <form name="new-card" class="popup__input" name="popup-form">
         <h2 class="popup__title">Новое место</h2>
-        <input class="popup__name popup__name_type_new-card" type="text" placeholder="Название" id="mesto">
-        <input class="popup__name popup__name_type_new-card" type="text" placeholder="Ссылка на картинку" id="link">
+        <div class="popup__name-container">
+          <input required name="place-name" class="popup__name popup__name_type_new-card" type="text"
+            placeholder="Название" id="mesto">
+          <span class="popup__name_type_err"></span>
+        </div>
+        <div class="popup__name-container">
+          <input required name="place-img-url" class="popup__name popup__name_type_new-card" type="url"
+            placeholder="Ссылка на картинку" id="link">
+          <span class="popup__name popup__name_type_err"></span>
+        </div>
         <button type="submit" class="popup__button">Создать</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
