--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </footer>
   <section class="popup popup_type_edit">
     <div class="popup__container popup__container_type_edit">
-      <form name="edit-profile" class="popup__input" name="popup-form">
+      <form class="popup__input" name="popup-form-profile">
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__name-container">
           <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
@@ -69,7 +69,7 @@
   </section>
   <section class="popup popup_type_new-card">
     <div class="popup__container popup__container_new-card">
-      <form name="new-card" class="popup__input" name="popup-form">
+      <form class="popup__input" name="popup-form-card">
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__name-container">
           <input required name="place-name" class="popup__name popup__name_type_new-card" type="text"
