--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="popup__name-container">
           <input required name="place-name" class="popup__name popup__name_type_new-card" type="text"
             placeholder="Название" id="mesto">
-          <span class="popup__name_type_err"></span>
+          <span class="popup__name popup__name_type_err"></span>
         </div>
         <div class="popup__name-container">
           <input required name="place-img-url" class="popup__name popup__name_type_new-card" type="url"
