--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   </section>
   <script src="scripts/initial-сards.js"></script>
   <script src="scripts/index.js"></script>
+  <script src="scripts/validations.js"></script>
 </body>
 
 </html>
