--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       <p class="popup__text"></p>
     </div>
   </section>
-  <script src="scripts/initial-сards.js"></script>
-  <script src="scripts/index.js"></script>
-  <script src="scripts/validations.js"></script>
+  <script type="module" src="scripts/initial-сards.js"></script>
+  <script type="module" src="scripts/index.js"></script>
+  <script type="module" src="scripts/FormValidator.js"></script>
 </body>
 
 </html>
