Поправила замечания после ревью

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__name-container">
           <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
-            value="Жак-Ив Кусто" id="name">
+            placeholder="Жак-Ив Кусто" id="name">
           <span class="popup__name popup__name_type_err"></span>
         </div>
         <div class="popup__name-container">
           <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
-            value="Исследователь океана" id="job">
+            placeholder="Исследователь океана" id="job">
           <span class="popup__name popup__name_type_err"></span>
         </div>
         <button type="submit" class="popup__button">Сохранить</button>
