--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__name-container">
           <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
-            placeholder="Жак-Ив Кусто" id="name">
+            placeholder="Имя" id="name">
           <span class="popup__name popup__name_type_err"></span>
         </div>
         <div class="popup__name-container">
           <input required minlength="2" maxlength="30" class="popup__name popup__name_type_edit" type="text"
-            placeholder="Исследователь океана" id="job">
+            placeholder="Вид деятельности" id="job">
           <span class="popup__name popup__name_type_err"></span>
         </div>
         <button type="submit" class="popup__button">Сохранить</button>
@@ -72,8 +72,8 @@
       <form class="popup__input" name="popup-form-card">
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__name-container">
-          <input required name="place-name" class="popup__name popup__name_type_new-card" type="text"
-            placeholder="Название" id="mesto">
+          <input required minlength="2" maxlength="30" name="place-name" class="popup__name popup__name_type_new-card"
+            type="text" placeholder="Название" id="mesto">
           <span class="popup__name popup__name_type_err"></span>
         </div>
         <div class="popup__name-container">
