--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
   <main>
     <section class="profile">
       <div class="profile__card">
-        <img class="profile__foto" src="images/gusto.jpg" alt="фото Жака-ив Кусто">
+        <div class="profile__foto-all">
+          <img class="profile__foto" src="images/gusto.jpg" alt="фото Жака-ив Кусто">
+        </div>
         <div class="profile__info">
           <div class="profile__info-text">
             <h1 class="profile__info-title">Жак-Ив Кусто</h1>
@@ -37,7 +39,10 @@
             src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="шаблон карточки">
           <div class="mesto-card__subtitle">
             <h2 class="mesto-card__subtitle-name"></h2>
-            <button class="mesto-card__subtitle-icon" type="button"></button>
+            <div class="mesto-card__subtitle-like">
+              <button class="mesto-card__subtitle-icon" type="button"></button>
+              <p class="mesto-card__subtitle-icon-like">2</p>
+            </div>
           </div>
           <button class="mesto-card__trash" type="button"></button>
         </div>
@@ -80,7 +85,7 @@
             placeholder="Ссылка на картинку" id="link">
           <span class="popup__name popup__name_type_err"></span>
         </div>
-        <button type="submit" class="popup__button">Создать</button>
+        <button type="submit" class="popup__button" id="popup__button-mesto">Создать</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
     </div>
@@ -91,6 +96,26 @@
       <img class="popup__card" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg"
         alt="фото">
       <p class="popup__text"></p>
+    </div>
+  </section>
+  <section class="popup popup_type_confirm">
+    <div class="popup__container popup__container_confirm">
+      <form class="popup__input" name="popup-form-confirm">
+        <h2 class="popup__title popup__title-confirm">Вы уверены?</h2>
+        <button type="submit" class="popup__button">Да</button>
+      </form>
+      <button class="popup__close-icon" type="button"></button>
+    </div>
+  </section>
+  <section class="popup popup_type_update">
+    <div class="popup__container popup__container_update">
+      <form class="popup__input" name="popup-form-update">
+        <h2 class="popup__title popup__title-update">Обновить аватар</h2>
+        <input required name="avatar-img-url" class="popup__name popup__name_type_update" type="url"
+          placeholder="Ссылка на картинку" id="link">
+        <button type="submit" class="popup__button popup__button-update">Сохранить</button>
+      </form>
+      <button class="popup__close-icon" type="button"></button>
     </div>
   </section>
 </body>
