--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,16 @@
     <section class="profile">
       <div class="profile__card">
         <div class="profile__foto-all">
-          <img class="profile__foto" src="images/gusto.jpg" alt="фото Жака-ив Кусто">
+          <img class="profile__foto" src="123" alt="фото Жака-ив Кусто">
         </div>
         <div class="profile__info">
           <div class="profile__info-text">
-            <h1 class="profile__info-title">Жак-Ив Кусто</h1>
+            <h1 class="profile__info-title"></h1>
             <button class="profile__button" type="button">
               <img class="profile__img" src='images/pan2.svg' alt="карандаш">
             </button>
           </div>
-          <p class="profile__info-subtitle">Исследователь океана</p>
+          <p class="profile__info-subtitle"></p>
         </div>
       </div>
       <button class="profile__button-add" type="button">
