--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <h2 class="mesto-card__subtitle-name"></h2>
             <div class="mesto-card__subtitle-like">
               <button class="mesto-card__subtitle-icon" type="button"></button>
-              <p class="mesto-card__subtitle-icon-like">2</p>
+              <p class="mesto-card__subtitle-icon-like"></p>
             </div>
           </div>
           <button class="mesto-card__trash" type="button"></button>
