спрятала кнопку удаления на чужих карточках

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <section class="profile">
       <div class="profile__card">
         <div class="profile__foto-all">
-          <img class="profile__foto" src="123" alt="фото Жака-ив Кусто">
+          <img class="profile__foto" src="./images/logo.svg" alt="фото Жака-ив Кусто">
         </div>
         <div class="profile__info">
           <div class="profile__info-text">
