--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
       <form class="popup__input" name="popup-form-update">
         <h2 class="popup__title popup__title-update">Обновить аватар</h2>
         <input required name="avatar-img-url" class="popup__name popup__name_type_update" type="url"
-          placeholder="Ссылка на картинку" id="link">
+          placeholder="Ссылка на картинку" id="link-avatar">
         <button type="submit" class="popup__button popup__button-update">Сохранить</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
