--- a/src/index.html
+++ b/src/index.html
@@ -111,8 +111,11 @@
     <div class="popup__container popup__container_update">
       <form class="popup__input" name="popup-form-update">
         <h2 class="popup__title popup__title-update">Обновить аватар</h2>
-        <input required name="avatar-img-url" class="popup__name popup__name_type_update" type="url"
-          placeholder="Ссылка на картинку" id="link-avatar">
+        <div class="popup__name-container">
+          <input required name="avatar-img-url" class="popup__name popup__name_type_update" type="url"
+            placeholder="Ссылка на картинку" id="link-avatar">
+          <span class="popup__name popup__name_type_err"></span>
+        </div>
         <button type="submit" class="popup__button popup__button-update">Сохранить</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
